# fs-utils

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
advanced/: index.html
api/: index.html
api-guide/: index.html
api/fs_utils.core.base/: index.html
api/fs_utils.core.ext/: index.html
api/fs_utils.helpers.datetime/: index.html
api/fs_utils.helpers.logging/: index.html
api/fs_utils.helpers.misc/: index.html
api/fs_utils.helpers.polars/: index.html
api/fs_utils.helpers.pyarrow/: index.html
api/fs_utils.helpers.sql/: index.html
api/fs_utils.helpers.types/: index.html
api/fs_utils.storage_options.base/: index.html
api/fs_utils.storage_options.cloud/: index.html
api/fs_utils.storage_options.core/: index.html
api/fs_utils.storage_options.git/: index.html
api/fsspeckit.core.base/: index.html
api/fsspeckit.core.ext/: index.html
api/fsspeckit.helpers.datetime/: index.html
api/fsspeckit.helpers.logging/: index.html
api/fsspeckit.helpers.misc/: index.html
api/fsspeckit.helpers.polars/: index.html
api/fsspeckit.helpers.pyarrow/: index.html
api/fsspeckit.helpers.sql/: index.html
api/fsspeckit.helpers.types/: index.html
api/fsspeckit.storage_options.base/: index.html
api/fsspeckit.storage_options.cloud/: index.html
api/fsspeckit.storage_options.core/: index.html
api/fsspeckit.storage_options.git/: index.html
api/fsspeckit.utils.datetime/: index.html
api/fsspeckit.utils.logging/: index.html
api/fsspeckit.utils.misc/: index.html
api/fsspeckit.utils.polars/: index.html
api/fsspeckit.utils.pyarrow/: index.html
api/fsspeckit.utils.sql/: index.html
api/fsspeckit.utils.types/: index.html
architecture/: index.html
contributing/: index.html
docs/: advanced.md  api-guide.md  architecture.md  contributing.md  examples.md  helpers.md  index.md  installation.md  quickstart.md
docs/api/: fs_utils.core.base.md  fs_utils.core.ext.md  fs_utils.helpers.datetime.md  fs_utils.helpers.logging.md  fs_utils.helpers.misc.md  fs_utils.helpers.polars.md  fs_utils.helpers.pyarrow.md  fs_utils.helpers.sql.md  fs_utils.helpers.types.md  fs_utils.storage_options.base.md  fs_utils.storage_options.cloud.md  fs_utils.storage_options.core.md  fs_utils.storage_options.git.md  fsspeckit.helpers.datetime.md  fsspeckit.helpers.logging.md  fsspeckit.helpers.misc.md  fsspeckit.helpers.polars.md  fsspeckit.helpers.pyarrow.md  fsspeckit.helpers.sql.md  fsspeckit.helpers.types.md  index.md
examples/: index.html
examples/__pydala_dataset/: pydala_dataset_example.ipynb  pydala_dataset_example.py  pydala_dataset_example_mamo.py
examples/batch_processing/: batch_processing_example.ipynb  batch_processing_example.py  batch_processing_example_mamo.py
helpers/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
site/: 404.html  sitemap.xml
site/advanced/: index.html
tests/: test_basic.py  test_sql.py  test_storage_options_cloud.py
utils/: index.html
(+58 files in other folders)
